--- a/src/DevRoots/components/Carousel/CarouselStyles.css
+++ b/src/DevRoots/components/Carousel/CarouselStyles.css
@@ -8,7 +8,6 @@
   }
   
   body {
-    background: #eee;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
@@ -16,6 +15,10 @@
     padding: 0;
   }
   
+  .mySwiper{
+
+    margin: 2rem 0;
+  }
   .swiper {
     width: 100%;
     height: 100%;
@@ -24,7 +27,7 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: none !important;
   
     /* Center slide text vertically */
     display: flex;
